{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 1487,
  "lineage": "6cab3d91-8aa7-a625-fdef-07bf68bbf356",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "created_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "memcache-mc01",
          "schema_version": 0,
          "attributes": {
            "ami": "ami-06c4532923d4ba1ec",
            "arn": "arn:aws:ec2:us-east-2:062894342784:instance/i-0ac170df9067c5741",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0ac170df9067c5741",
            "instance_id": "i-0ac170df9067c5741",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "devpro-stack-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "network_interface_id": "eni-0dc6d8c59b2b53569",
            "placement_partition_number": 0,
            "private_dns": "ip-172-20-1-205.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.205",
            "public_dns": "ec2-3-139-80-99.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.80.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "memcache-mc01"
                },
                "throughput": 0,
                "volume_id": "vol-0e9570fe0999ca2ba",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0654aa74c119052ab",
            "tags": {
              "Environment": "dev",
              "Name": "memcache-mc01",
              "Role": "mcsrvgrp",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d83173e3292eda4c"
            ]
          }
        },
        {
          "index_key": "mysql-db01",
          "schema_version": 0,
          "attributes": {
            "ami": "ami-06c4532923d4ba1ec",
            "arn": "arn:aws:ec2:us-east-2:062894342784:instance/i-026ad859bfef1b568",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-026ad859bfef1b568",
            "instance_id": "i-026ad859bfef1b568",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "devpro-stack-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "network_interface_id": "eni-05c38a6c0a7c204c7",
            "placement_partition_number": 0,
            "private_dns": "ip-172-20-1-213.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.213",
            "public_dns": "ec2-3-17-181-125.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.181.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "mysql-db01"
                },
                "throughput": 0,
                "volume_id": "vol-0db4a53e7c6bb729c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0654aa74c119052ab",
            "tags": {
              "Environment": "dev",
              "Name": "mysql-db01",
              "Role": "dbsrvgrp",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d83173e3292eda4c"
            ]
          }
        },
        {
          "index_key": "nginx-web01",
          "schema_version": 0,
          "attributes": {
            "ami": "ami-06c4532923d4ba1ec",
            "arn": "arn:aws:ec2:us-east-2:062894342784:instance/i-0d4c6586fc298c513",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0d4c6586fc298c513",
            "instance_id": "i-0d4c6586fc298c513",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "devpro-stack-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "network_interface_id": "eni-0f5b6319f3468add9",
            "placement_partition_number": 0,
            "private_dns": "ip-172-20-1-19.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.19",
            "public_dns": "ec2-3-137-171-5.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.171.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "nginx-web01"
                },
                "throughput": 0,
                "volume_id": "vol-0ff07f647efc2c3d5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0654aa74c119052ab",
            "tags": {
              "Environment": "dev",
              "Name": "nginx-web01",
              "Role": "websrvgrp",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d83173e3292eda4c"
            ]
          }
        },
        {
          "index_key": "rabbitmq-rmq01",
          "schema_version": 0,
          "attributes": {
            "ami": "ami-06c4532923d4ba1ec",
            "arn": "arn:aws:ec2:us-east-2:062894342784:instance/i-044adbaa4cf729a89",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-044adbaa4cf729a89",
            "instance_id": "i-044adbaa4cf729a89",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "devpro-stack-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "network_interface_id": "eni-0b52cbdd5207d71b7",
            "placement_partition_number": 0,
            "private_dns": "ip-172-20-1-172.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.172",
            "public_dns": "ec2-18-117-102-13.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.102.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "rabbitmq-rmq01"
                },
                "throughput": 0,
                "volume_id": "vol-08eb3e7186aa861a3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0654aa74c119052ab",
            "tags": {
              "Environment": "dev",
              "Name": "rabbitmq-rmq01",
              "Role": "rmqsrvgrp",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d83173e3292eda4c"
            ]
          }
        },
        {
          "index_key": "tomcat-app01",
          "schema_version": 0,
          "attributes": {
            "ami": "ami-06c4532923d4ba1ec",
            "arn": "arn:aws:ec2:us-east-2:062894342784:instance/i-09be4c3a34a93796e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-09be4c3a34a93796e",
            "instance_id": "i-09be4c3a34a93796e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "devpro-stack-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "network_interface_id": "eni-05bcb9f26ce6a7be4",
            "placement_partition_number": 0,
            "private_dns": "ip-172-20-1-124.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.124",
            "public_dns": "ec2-3-12-153-124.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.153.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "tomcat-app01"
                },
                "throughput": 0,
                "volume_id": "vol-05daa66216764f645",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0654aa74c119052ab",
            "tags": {
              "Environment": "dev",
              "Name": "tomcat-app01",
              "Role": "appsrvgrp",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d83173e3292eda4c"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c4532923d4ba1ec",
            "arn": "arn:aws:ec2:us-east-2:062894342784:instance/i-0638afbda4e1e7fdd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0638afbda4e1e7fdd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devpro-stack-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c0d2dc70b4de0812",
            "private_dns": "ip-172-20-1-137.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.137",
            "public_dns": "ec2-18-221-226-12.us-east-2.compute.amazonaws.com",
            "public_ip": "18.221.226.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08291b16647d3c1c2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0654aa74c119052ab",
            "tags": {
              "Environment": "dev",
              "Role": "bastion",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Role": "bastion",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d83173e3292eda4c"
            ]
          },
          "dependencies": [
            "module.key_pair.aws_key_pair.this",
            "module.key_pair.tls_private_key.this",
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "memcache-mc01",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:062894342784:targetgroup/pref-20230427111051517600000003/3337659ad6ab6fb5-2023042711150406970000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:062894342784:targetgroup/pref-20230427111051517600000003/3337659ad6ab6fb5",
            "target_id": "i-0ac170df9067c5741"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.main",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_iam_role_policy_attachment.this",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.key_pair.aws_key_pair.this",
            "module.key_pair.tls_private_key.this",
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": "mysql-db01",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:062894342784:targetgroup/pref-20230427111051517600000003/3337659ad6ab6fb5-20230427111503748600000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:062894342784:targetgroup/pref-20230427111051517600000003/3337659ad6ab6fb5",
            "target_id": "i-026ad859bfef1b568"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.main",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_iam_role_policy_attachment.this",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.key_pair.aws_key_pair.this",
            "module.key_pair.tls_private_key.this",
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": "nginx-web01",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:062894342784:targetgroup/pref-20230427111051517600000003/3337659ad6ab6fb5-2023042711150381840000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:062894342784:targetgroup/pref-20230427111051517600000003/3337659ad6ab6fb5",
            "target_id": "i-0d4c6586fc298c513"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.main",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_iam_role_policy_attachment.this",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.key_pair.aws_key_pair.this",
            "module.key_pair.tls_private_key.this",
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": "rabbitmq-rmq01",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:062894342784:targetgroup/pref-20230427111051517600000003/3337659ad6ab6fb5-20230427111503450300000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:062894342784:targetgroup/pref-20230427111051517600000003/3337659ad6ab6fb5",
            "target_id": "i-044adbaa4cf729a89"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.main",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_iam_role_policy_attachment.this",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.key_pair.aws_key_pair.this",
            "module.key_pair.tls_private_key.this",
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": "tomcat-app01",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:062894342784:targetgroup/pref-20230427111051517600000003/3337659ad6ab6fb5-20230427111503156400000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:062894342784:targetgroup/pref-20230427111051517600000003/3337659ad6ab6fb5",
            "target_id": "i-09be4c3a34a93796e"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.main",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_iam_role_policy_attachment.this",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.key_pair.aws_key_pair.this",
            "module.key_pair.tls_private_key.this",
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "my-alb-logs-memoor72",
                "enabled": true
              }
            ],
            "desync_mitigation_mode": "defensive",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:062894342784:loadbalancer/app/devpro-elb/086c9997f0feaf05",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devpro-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01bdd168358d5c121",
              "sg-0d83173e3292eda4c",
              "sg-0eb4bd89700c1e9cb"
            ],
            "subnets": [
              "subnet-02c8e1f247c78dc6c",
              "subnet-032b783ab34c2c137",
              "subnet-0654aa74c119052ab"
            ],
            "tags": {
              "Environment": "Test",
              "Name": "devpro-elb"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "devpro-elb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "xff_header_processing_mode": "append"
          },
          "dependencies": [
            "aws_s3_bucket.alb_logs",
            "module.alb.aws_security_group.this",
            "module.devproELB_sg.aws_security_group.this",
            "module.devproELB_sg.aws_security_group.this_name_prefix",
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:062894342784:targetgroup/pref-20230427111051517600000003/3337659ad6ab6fb5",
            "arn_suffix": "targetgroup/pref-20230427111051517600000003/3337659ad6ab6fb5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:062894342784:targetgroup/pref-20230427111051517600000003/3337659ad6ab6fb5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pref-20230427111051517600000003",
            "name_prefix": "pref-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Test",
              "Name": "pref-"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "pref-"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b995a5972b1d2527"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:062894342784:security-group/sg-0eb4bd89700c1e9cb",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0eb4bd89700c1e9cb",
            "ingress": [],
            "name": "devpro-elb-20230427111051591700000004",
            "name_prefix": "devpro-elb-",
            "owner_id": "062894342784",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "Name": "devpro-elb"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "devpro-elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b995a5972b1d2527"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.devproELB_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.devproELB_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:062894342784:security-group/sg-01bdd168358d5c121",
            "description": "Security group for load balancer",
            "egress": [],
            "id": "sg-01bdd168358d5c121",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "elb HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devproELB-20230427111051401200000001",
            "name_prefix": "devproELB-",
            "owner_id": "062894342784",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devproELB"
            },
            "tags_all": {
              "Name": "devproELB"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0b995a5972b1d2527"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.devproELB_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "elb HTTP",
            "from_port": 80,
            "id": "sgrule-2958104846",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01bdd168358d5c121",
            "security_group_rule_id": "sgr-0ef982c9ee600c91d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.devproELB_sg.aws_security_group.this",
            "module.devproELB_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"memcache-mc01\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c4532923d4ba1ec",
            "arn": "arn:aws:ec2:us-east-2:062894342784:instance/i-0ac170df9067c5741",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac170df9067c5741",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devpro-stack-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dc6d8c59b2b53569",
            "private_dns": "ip-172-20-1-205.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.205",
            "public_dns": "ec2-3-139-80-99.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.80.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e9570fe0999ca2ba",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0654aa74c119052ab",
            "tags": {
              "Environment": "dev",
              "Name": "memcache-mc01",
              "Role": "mcsrvgrp",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "memcache-mc01",
              "Role": "mcsrvgrp",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "memcache-mc01"
            },
            "vpc_security_group_ids": [
              "sg-0d83173e3292eda4c"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.key_pair.aws_key_pair.this",
            "module.key_pair.tls_private_key.this",
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"mysql-db01\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c4532923d4ba1ec",
            "arn": "arn:aws:ec2:us-east-2:062894342784:instance/i-026ad859bfef1b568",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-026ad859bfef1b568",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devpro-stack-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05c38a6c0a7c204c7",
            "private_dns": "ip-172-20-1-213.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.213",
            "public_dns": "ec2-3-17-181-125.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.181.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0db4a53e7c6bb729c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0654aa74c119052ab",
            "tags": {
              "Environment": "dev",
              "Name": "mysql-db01",
              "Role": "dbsrvgrp",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mysql-db01",
              "Role": "dbsrvgrp",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "mysql-db01"
            },
            "vpc_security_group_ids": [
              "sg-0d83173e3292eda4c"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.key_pair.aws_key_pair.this",
            "module.key_pair.tls_private_key.this",
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"nginx-web01\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c4532923d4ba1ec",
            "arn": "arn:aws:ec2:us-east-2:062894342784:instance/i-0d4c6586fc298c513",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d4c6586fc298c513",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devpro-stack-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f5b6319f3468add9",
            "private_dns": "ip-172-20-1-19.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.19",
            "public_dns": "ec2-3-137-171-5.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.171.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ff07f647efc2c3d5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0654aa74c119052ab",
            "tags": {
              "Environment": "dev",
              "Name": "nginx-web01",
              "Role": "websrvgrp",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nginx-web01",
              "Role": "websrvgrp",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "nginx-web01"
            },
            "vpc_security_group_ids": [
              "sg-0d83173e3292eda4c"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.key_pair.aws_key_pair.this",
            "module.key_pair.tls_private_key.this",
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"rabbitmq-rmq01\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c4532923d4ba1ec",
            "arn": "arn:aws:ec2:us-east-2:062894342784:instance/i-044adbaa4cf729a89",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044adbaa4cf729a89",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devpro-stack-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b52cbdd5207d71b7",
            "private_dns": "ip-172-20-1-172.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.172",
            "public_dns": "ec2-18-117-102-13.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.102.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08eb3e7186aa861a3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0654aa74c119052ab",
            "tags": {
              "Environment": "dev",
              "Name": "rabbitmq-rmq01",
              "Role": "rmqsrvgrp",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rabbitmq-rmq01",
              "Role": "rmqsrvgrp",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "rabbitmq-rmq01"
            },
            "vpc_security_group_ids": [
              "sg-0d83173e3292eda4c"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.key_pair.aws_key_pair.this",
            "module.key_pair.tls_private_key.this",
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"tomcat-app01\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c4532923d4ba1ec",
            "arn": "arn:aws:ec2:us-east-2:062894342784:instance/i-09be4c3a34a93796e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09be4c3a34a93796e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devpro-stack-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05bcb9f26ce6a7be4",
            "private_dns": "ip-172-20-1-124.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.124",
            "public_dns": "ec2-3-12-153-124.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.153.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05daa66216764f645",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0654aa74c119052ab",
            "tags": {
              "Environment": "dev",
              "Name": "tomcat-app01",
              "Role": "appsrvgrp",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tomcat-app01",
              "Role": "appsrvgrp",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "tomcat-app01"
            },
            "vpc_security_group_ids": [
              "sg-0d83173e3292eda4c"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.key_pair.aws_key_pair.this",
            "module.key_pair.tls_private_key.this",
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vote_service_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vote_service_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:062894342784:security-group/sg-0d83173e3292eda4c",
            "description": "Security group for devpro-stacks",
            "egress": [],
            "id": "sg-0d83173e3292eda4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Memcache",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11211
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Nginx HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Nginx HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RabbitMQ",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Tomcat",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8090
              }
            ],
            "name": "devpro-stack-sg-20230427111051494200000002",
            "name_prefix": "devpro-stack-sg-",
            "owner_id": "062894342784",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devpro-stack-sg"
            },
            "tags_all": {
              "Name": "devpro-stack-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0b995a5972b1d2527"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vote_service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Nginx HTTP",
            "from_port": 80,
            "id": "sgrule-1106038908",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d83173e3292eda4c",
            "security_group_rule_id": "sgr-0a2fc9bcd7d5a0dff",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Nginx HTTPS",
            "from_port": 443,
            "id": "sgrule-2742732592",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d83173e3292eda4c",
            "security_group_rule_id": "sgr-08690c248405f1270",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Tomcat",
            "from_port": 8080,
            "id": "sgrule-801512296",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d83173e3292eda4c",
            "security_group_rule_id": "sgr-0e71e879c6541c9a9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8090,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Memcache",
            "from_port": 11211,
            "id": "sgrule-360029707",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d83173e3292eda4c",
            "security_group_rule_id": "sgr-0f355cc288ab51e7e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 11211,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "RabbitMQ",
            "from_port": 5672,
            "id": "sgrule-1307774730",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d83173e3292eda4c",
            "security_group_rule_id": "sgr-00ee9d902d3236a16",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5672,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "MySQL",
            "from_port": 3306,
            "id": "sgrule-84842288",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d83173e3292eda4c",
            "security_group_rule_id": "sgr-03e32ed97e8072dd7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-4150693321",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d83173e3292eda4c",
            "security_group_rule_id": "sgr-08d9fd2555578ffe0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:062894342784:network-acl/acl-09fe2c889a52659d8",
            "default_network_acl_id": "acl-09fe2c889a52659d8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09fe2c889a52659d8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "062894342784",
            "subnet_ids": [
              "subnet-02c8e1f247c78dc6c",
              "subnet-032b783ab34c2c137",
              "subnet-033ac4f5b6c121eb0",
              "subnet-051636353f1880e13",
              "subnet-0654aa74c119052ab",
              "subnet-0c045988511ae5b0b"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b995a5972b1d2527"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:062894342784:route-table/rtb-027d5479d1307e183",
            "default_route_table_id": "rtb-027d5479d1307e183",
            "id": "rtb-027d5479d1307e183",
            "owner_id": "062894342784",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b995a5972b1d2527"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:062894342784:security-group/sg-00832c1bd95e82010",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-00832c1bd95e82010",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "062894342784",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b995a5972b1d2527"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0056103e88da4b02c",
            "association_id": "eipassoc-0a14c8687a59b0040",
            "domain": "vpc",
            "id": "eipalloc-0056103e88da4b02c",
            "network_border_group": "us-east-2",
            "network_interface": "eni-057fedc3f21aee930",
            "private_dns": "ip-172-20-1-69.us-east-2.compute.internal",
            "private_ip": "172.20.1.69",
            "public_dns": "ec2-3-19-205-5.us-east-2.compute.amazonaws.com",
            "public_ip": "3.19.205.5",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:062894342784:internet-gateway/igw-0281709dd750002cd",
            "id": "igw-0281709dd750002cd",
            "owner_id": "062894342784",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b995a5972b1d2527"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0056103e88da4b02c",
            "association_id": "eipassoc-0a14c8687a59b0040",
            "connectivity_type": "public",
            "id": "nat-06bcea06a0ee57f96",
            "network_interface_id": "eni-057fedc3f21aee930",
            "private_ip": "172.20.1.69",
            "public_ip": "3.19.205.5",
            "subnet_id": "subnet-0654aa74c119052ab",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c1ec5a10de9d76f01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06bcea06a0ee57f96",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c1ec5a10de9d76f0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0281709dd750002cd",
            "id": "r-rtb-0945c9f416d21c6e61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0945c9f416d21c6e6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:062894342784:route-table/rtb-0c1ec5a10de9d76f0",
            "id": "rtb-0c1ec5a10de9d76f0",
            "owner_id": "062894342784",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06bcea06a0ee57f96",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b995a5972b1d2527"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:062894342784:route-table/rtb-0945c9f416d21c6e6",
            "id": "rtb-0945c9f416d21c6e6",
            "owner_id": "062894342784",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0281709dd750002cd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b995a5972b1d2527"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033d0da8e5c254d42",
            "route_table_id": "rtb-0c1ec5a10de9d76f0",
            "subnet_id": "subnet-033ac4f5b6c121eb0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee7b8a159865e2d9",
            "route_table_id": "rtb-0c1ec5a10de9d76f0",
            "subnet_id": "subnet-051636353f1880e13"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c614c8dc2a56c2e4",
            "route_table_id": "rtb-0c1ec5a10de9d76f0",
            "subnet_id": "subnet-0c045988511ae5b0b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c4ad5b450eb7088",
            "route_table_id": "rtb-0945c9f416d21c6e6",
            "subnet_id": "subnet-0654aa74c119052ab"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d90815b1d4ba0bce",
            "route_table_id": "rtb-0945c9f416d21c6e6",
            "subnet_id": "subnet-02c8e1f247c78dc6c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0107920939ba6f60c",
            "route_table_id": "rtb-0945c9f416d21c6e6",
            "subnet_id": "subnet-032b783ab34c2c137"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:062894342784:subnet/subnet-033ac4f5b6c121eb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033ac4f5b6c121eb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "062894342784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Name-1": "dev-prisubnet-1",
              "Name-2": "dev-prisubnet-2",
              "Name-3": "dev-prisubnet-3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Name-1": "dev-prisubnet-1",
              "Name-2": "dev-prisubnet-2",
              "Name-3": "dev-prisubnet-3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b995a5972b1d2527"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:062894342784:subnet/subnet-051636353f1880e13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051636353f1880e13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "062894342784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Name-1": "dev-prisubnet-1",
              "Name-2": "dev-prisubnet-2",
              "Name-3": "dev-prisubnet-3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Name-1": "dev-prisubnet-1",
              "Name-2": "dev-prisubnet-2",
              "Name-3": "dev-prisubnet-3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b995a5972b1d2527"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:062894342784:subnet/subnet-0c045988511ae5b0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.20.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c045988511ae5b0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "062894342784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Name-1": "dev-prisubnet-1",
              "Name-2": "dev-prisubnet-2",
              "Name-3": "dev-prisubnet-3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Name-1": "dev-prisubnet-1",
              "Name-2": "dev-prisubnet-2",
              "Name-3": "dev-prisubnet-3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b995a5972b1d2527"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:062894342784:subnet/subnet-0654aa74c119052ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0654aa74c119052ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "062894342784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Name-1": "dev-pubsubnet-1",
              "Name-2": "dev-pubsubnet-2",
              "Name-3": "dev-pubsubnet-3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Name-1": "dev-pubsubnet-1",
              "Name-2": "dev-pubsubnet-2",
              "Name-3": "dev-pubsubnet-3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b995a5972b1d2527"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:062894342784:subnet/subnet-02c8e1f247c78dc6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c8e1f247c78dc6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "062894342784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Name-1": "dev-pubsubnet-1",
              "Name-2": "dev-pubsubnet-2",
              "Name-3": "dev-pubsubnet-3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Name-1": "dev-pubsubnet-1",
              "Name-2": "dev-pubsubnet-2",
              "Name-3": "dev-pubsubnet-3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b995a5972b1d2527"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:062894342784:subnet/subnet-032b783ab34c2c137",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032b783ab34c2c137",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "062894342784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Name-1": "dev-pubsubnet-1",
              "Name-2": "dev-pubsubnet-2",
              "Name-3": "dev-pubsubnet-3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Name-1": "dev-pubsubnet-1",
              "Name-2": "dev-pubsubnet-2",
              "Name-3": "dev-pubsubnet-3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b995a5972b1d2527"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:062894342784:vpc/vpc-0b995a5972b1d2527",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-09fe2c889a52659d8",
            "default_route_table_id": "rtb-027d5479d1307e183",
            "default_security_group_id": "sg-00832c1bd95e82010",
            "dhcp_options_id": "dopt-0345f1f935d135d85",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b995a5972b1d2527",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-027d5479d1307e183",
            "owner_id": "062894342784",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}